Rename json tag from student_id to user_id. Fix struct fields name.
