# docs/swagger.yaml
@@ -25,6 +25,8 @@ definitions:
         type: string
       group_id:
         type: integer
+      group_name:
+        type: string
       mentor_id:
         type: integer
     type: object
@@ -85,7 +87,7 @@ definitions:
         type: array
       last_name:
         type: string
-      student_id:
+      user_id:
         type: integer
     type: object
   models.Student:
@@ -102,7 +104,7 @@ definitions:
         type: string
       password:
         type: string
-      student_id:
+      user_id:
         type: integer
     type: object
   models.User:
@@ -117,7 +119,7 @@ definitions:
         type: string
       password:
         type: string
-      student_id:
+      user_id:
         type: integer
     type: object
   models.UserData:
@@ -130,7 +132,7 @@ definitions:
         type: string
       last_name:
         type: string
-      student_id:
+      user_id:
         type: integer
     type: object
   rest.ErrorMessage:
@@ -187,7 +189,7 @@ paths:
       description: Create new group in database
       operationId: new-admin
       parameters:
-      - description: New admin ID
+      - description: ID of the user who will be granted admin rights
         in: query
         name: user_id
         required: true
@@ -1394,7 +1396,7 @@ paths:
       description: Create new group in database
       operationId: new-mentor
       parameters:
-      - description: New mentor ID
+      - description: ID of the user who will be granted mentor rights
         in: query
         name: user_id
         required: true
